Fixes accessibility css errors; fixes column spacing in tablet mode

--- a/client/stylesheets/mobile/_typography.scss
+++ b/client/stylesheets/mobile/_typography.scss
@@ -24,7 +24,7 @@ h5 { font-size: $em*0.95; font-style: italic; }
 h6 { font-size: $em*0.8; line-height: 2; }
 
 a {
-  color: darken($primary, 5%);
+  color: darken($primary, 15%);
   text-decoration: none;
 }
 
