--- a/public/app.css
+++ b/public/app.css
@@ -164,7 +164,7 @@ h6 {
   line-height: 2; }
 
 a {
-  color: #16a0c3;
+  color: #117b95;
   text-decoration: none; }
 
 a:hover {
